# coppice-rs

./: .gitignore  Cargo.toml  README.md  buf.yaml  initial_design.md  rust-toolchain.toml
crates/coppice-agent/: Cargo.toml  README.md
crates/coppice-agent/.sqlx/: query-0763320d69b7c1c7102485f0f84ba4fddf5e3d46bff90c3d52522bcd8b7f7d36.json  query-139b3326b531b3354efdaf0967613397baae2f9c66f661c7a01a6ff91f46644a.json  query-2c1316ad46bb7ebc33d444f50aadd41a7aa8cb6c0f4aa3bd0edeac39719802e2.json  query-2d4dc15474f93354b4a1427d23829b4d1343e4c778a2fde5dedbb642b3e580af.json  query-3028a5af85125782e576c7b2492c7ddd1121758d6058809d3b124d5750123e20.json  query-329392fef7f8e8e4c33b60c3966580cdb06fd14168f59915352facd1e0388e52.json  query-3ae8c532bdb1e62d47ee2af4637f4f81ae8877d13d6c9f5a8dcbc22fd8110d90.json  query-42adba8ef49f4f10edf363b275327f9542ef88f3fc2999e98246692942f71b16.json  query-4b8d0e8b3a43501f06ae40a5187a0abfa99e9eed56598b5fcb0f4d7b2e7dafb1.json  query-51cc9b82e951d9e338e2e02eb812bcc04c96fa75ed8a1540403a72ee54e61144.json  query-55338ee2a421b0345f9ae0a321f53f9c822f52a7763548655276f71d68fe5322.json  query-72b061216588371968f46b9b9dad22b6dac0540736c128365cc07d3e2bc2041b.json  query-752919c0d6a95010b9903c2513ca55a0354149dd1a987b43bb19b07b1dbfa595.json  query-af6db5a42b61c9f4a3211e1c23f51a85b2a0bb0a09f4c78cb4a3efff1c909a1f.json  query-afd50f7c487f09379b8a0287e7b822b4d0436aee85b47e680b8c5fcf0374e3c4.json  query-afeb2e57d259e479ccdf13581e8be2d35f5b20cc07f3156a73447eba6e4d2ba6.json  query-aff9304e572c13cd9a91d307f82d79a322e689c35f4180499291e3e4e35a96d2.json  query-b764eaca27bdc51e1aa7808d9a781f7264c984546b44c539851e35d52a369522.json  query-be09042d5ed5d6f5689b379824acb4f54486f12d01bef89540b0aa5c4ce2b9be.json  query-c660dbb25cc6b7f62afaba297cbcb5587b0ebd0eff54e505d593ac7e42680df1.json  query-c8e0045eedcd4dbcc476042a8b5c81e5677d8f9543ad7c18bb2f1549618b450c.json  query-c9a44394e9b6e26dcf371f9141b37a1807a93748554324e0ea065c76bcff4dfc.json  query-cd1568a01fda252c3bcf2a9d3457bb9b45a6376ea6230d26614a52ae0b54eff5.json  query-d8dd2083274fcb211fad88ffd91ed5a631c15425490426505d69e2c2fa3e489c.json  query-e3cd2a7299465913db50c9f90a42f351f685cf9db9ab2546f365e2af9fa5b1fa.json  query-e4016e6cb0811a9aa306107c4d7d05cd04cd2a7ab585660a09146c5459cd1ee5.json  query-e77e4244f15f1bc9cf7026680e49044fc09361eb27fa752f215224a22ad6be04.json  query-f7a87b737de403924b193d35362ca69dafccf169d4723c9207de455067e1085a.json
crates/coppice-agent/migrations/telemetry/: 0001_segment_schema.sql
crates/coppice-agent/src/: config.rs  executor.rs  journal.rs  lib.rs  main.rs  metrics_server.rs  node_service.rs  observed.rs  pressure.rs  session.rs
crates/coppice-agent/src/executor/docker/: api.rs  cache.rs  classify.rs  cpuset.rs  disk.rs  (+7 more)
crates/coppice-agent/src/session/: runner.rs  tests.rs
crates/coppice-agent/src/telemetry/: fs_sink.rs  hub.rs  mod.rs  sink.rs
crates/coppice-agent/tests/: crash_journal.rs  docker_executor.rs  node_service.rs
crates/coppice-api/: Cargo.toml  README.md  build.rs
crates/coppice-api/src/: lib.rs
crates/coppice-api/src/http/: dto.rs  error.rs  extract.rs  logs.rs  metrics.rs  mod.rs  project.rs  read.rs  readyz.rs  routes.rs  ui.rs  usage.rs
crates/coppice-cli/: Cargo.toml  README.md
crates/coppice-cli/src/: cluster.rs  dev.rs  job.rs  main.rs
crates/coppice-consensus/: Cargo.toml  README.md
crates/coppice-consensus/benches/: append_commit.rs  recovery_replay.rs  snapshot_codec.rs
crates/coppice-consensus/src/: adapter.rs  apply_loop.rs  error.rs  events.rs  fs.rs  lib.rs  membership.rs  node.rs  status.rs  view.rs
crates/coppice-consensus/src/net/: client.rs  convert.rs  mod.rs  server.rs
crates/coppice-consensus/src/storage/: container.rs  engine.rs  log.rs  mod.rs  raftpb.rs  sm.rs  snapshot.rs
crates/coppice-consensus/tests/: crash_storage.rs  openraft_compliance.rs  snapshot_roundtrip.rs
crates/coppice-coordinator/: Cargo.toml  README.md
crates/coppice-coordinator/src/: admin.rs  bootstrap.rs  cli.rs  config.rs  convergence.rs  leadership.rs  lib.rs  limits.rs  liveness.rs  main.rs  policy.rs  readyz.rs  runtime.rs  systemd.rs  test_support.rs
crates/coppice-coordinator/src/discovery/: dns.rs  ec2_asg.rs  file.rs  mod.rs  static_backend.rs
crates/coppice-coordinator/src/tasks/: agent_gateway.rs  api_server.rs  derived_stats.rs  dispatch.rs  event_fanout.rs  housekeeping.rs  ingestion.rs  mod.rs  node_client.rs  scheduler_driver.rs
crates/coppice-coordinator/tests/: agent_protocol.rs  cluster.rs  convergence.rs  job_logs.rs  job_metrics.rs  membership_failure_modes.rs  readyz.rs  set_address.rs  submit_retry.rs
crates/coppice-coordinator/tests/common/: mod.rs
crates/coppice-core/: Cargo.toml  README.md
crates/coppice-core/src/: allocation.rs  attempt.rs  bytes.rs  id.rs  job.rs  lib.rs  node.rs  quota.rs  resource.rs  time.rs
crates/coppice-core/tests/: quota_properties.rs
crates/coppice-net/: Cargo.toml  README.md  build.rs
crates/coppice-net/src/: lib.rs
crates/coppice-proto/: Cargo.toml  README.md  build.rs
crates/coppice-proto/src/: agent.rs  api.rs  convert.rs  lib.rs  pb.rs
crates/coppice-proto/src/convert/: command.rs  core.rs  snapshot.rs
crates/coppice-proto/tests/: breaking.rs  json.rs  roundtrip.rs
crates/coppice-raft-net/: Cargo.toml  build.rs
crates/coppice-raft-net/src/: lib.rs
crates/coppice-scheduler/: Cargo.toml  README.md
crates/coppice-scheduler/src/: engine.rs  lib.rs  score.rs
crates/coppice-scheduler/tests/: engine.rs  schedule_apply.rs  score_properties.rs
crates/coppice-scheduler/tests/common/: mod.rs
crates/coppice-state/: Cargo.toml  README.md
crates/coppice-state/src/: apply.rs  command.rs  lib.rs
crates/coppice-state/tests/: determinism.proptest-regressions  determinism.rs  lifecycle.rs
crates/coppice-state/tests/common/: mod.rs
crates/coppice-testkit/: Cargo.toml  README.md
crates/coppice-testkit/src/: harness.rs  lib.rs  rng.rs  simfs.rs  synth.rs  toy.rs
crates/coppice-testkit/tests/: crash_scenarios.rs
crates/coppice-tls/: Cargo.toml
crates/coppice-tls/src/: lib.rs  tests.rs
(+188 files in other folders)
