[workspace]
resolver = "2"
members = [
    "crates/coppice-core",
    "crates/coppice-proto",
    "crates/coppice-state",
    "crates/coppice-consensus",
    "crates/coppice-scheduler",
    "crates/coppice-api",
    "crates/coppice-coordinator",
    "crates/coppice-agent",
    "crates/coppice-cli",
    "crates/coppice-testkit",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/josephroberts/coppice"
authors = ["The Coppice Authors"]

[workspace.dependencies]
# Internal crates
coppice-core = { path = "crates/coppice-core" }
coppice-proto = { path = "crates/coppice-proto" }
coppice-state = { path = "crates/coppice-state" }
coppice-consensus = { path = "crates/coppice-consensus" }
coppice-scheduler = { path = "crates/coppice-scheduler" }
coppice-api = { path = "crates/coppice-api" }
# Test and bench infrastructure only — always a dev-dependency, never shipped.
coppice-testkit = { path = "crates/coppice-testkit" }

# Common third-party dependencies. Versions are pinned centrally so every
# crate in the workspace stays in lockstep.
anyhow = "1"
# CRC32C (Castagnoli) — the per-entry / per-section checksum mandated by
# ADR 0002 and ADR 0018.
crc32c = "0.6"
# Benchmark harness for the ADR 0018 storage benchmark suite.
criterion = "0.5"
# Advisory file locking for the storage LOCK file (ADR 0017); std gains
# File::lock only after our 1.79 MSRV.
fs2 = "0.4"
# openraft drives election, replication, and membership; the app data types
# (`Command`, `Applied`, `RejectionReason`) do not implement serde, so the
# "serde" feature is deliberately left off (ADR 0002). Default features cover
# the tokio runtime support the adapter needs. "storage-v2" unseals the
# `RaftLogStorage`/`RaftStateMachine` traits the segment storage engine
# implements (ADR 0002).
openraft = { version = "0.9", features = ["storage-v2"] }
proptest = "1"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protox = "0.7"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
