[workspace]
resolver = "2"
members = [
    "crates/coppice-core",
    "crates/coppice-proto",
    "crates/coppice-net",
    "crates/coppice-state",
    "crates/coppice-consensus",
    "crates/coppice-scheduler",
    "crates/coppice-api",
    "crates/coppice-coordinator",
    "crates/coppice-agent",
    "crates/coppice-cli",
    "crates/coppice-testkit",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/Joey9801/coppice-rs"
authors = ["The Coppice Authors"]

[workspace.dependencies]
# Internal crates
coppice-core = { path = "crates/coppice-core" }
coppice-proto = { path = "crates/coppice-proto" }
coppice-net = { path = "crates/coppice-net" }
coppice-agent = { path = "crates/coppice-agent" }
coppice-state = { path = "crates/coppice-state" }
coppice-consensus = { path = "crates/coppice-consensus" }
coppice-scheduler = { path = "crates/coppice-scheduler" }
coppice-api = { path = "crates/coppice-api" }
coppice-coordinator = { path = "crates/coppice-coordinator" }
# Test and bench infrastructure only — always a dev-dependency, never shipped.
coppice-testkit = { path = "crates/coppice-testkit" }

# Common third-party dependencies. Versions are pinned centrally so every
# crate in the workspace stays in lockstep.
anyhow = "1"
# Coordinator CLI surface — deliberately tiny per ADR 0020: `--config`, the
# ADR 0016 intent flags, and the hidden admin verbs.
clap = { version = "4", features = ["derive"] }
# CRC32C (Castagnoli) — the per-entry / per-section checksum mandated by
# ADR 0002 and ADR 0018.
crc32c = "0.6"
# Benchmark harness for the ADR 0018 storage benchmark suite.
criterion = "0.5"
# Advisory file locking for the storage LOCK file (ADR 0017); std gains
# File::lock only after our 1.79 MSRV.
fs2 = "0.4"
# openraft drives election, replication, and membership; the app data types
# (`Command`, `Applied`, `RejectionReason`) do not implement serde, so the
# "serde" feature is deliberately left off (ADR 0002). Default features cover
# the tokio runtime support the adapter needs. "storage-v2" unseals the
# `RaftLogStorage`/`RaftStateMachine` traits the segment storage engine
# implements (ADR 0002). "generic-snapshot-data" lifts the tokio
# AsyncRead/Write/Seek bounds on `SnapshotData`, letting the binding be the
# file-backed `SnapshotFile` handle so install-snapshot streams the ADR 0018
# container instead of holding it in memory.
openraft = { version = "0.9", features = ["storage-v2", "generic-snapshot-data"] }
proptest = "1"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protox = "0.7"
# Test-only certificate generation (ring provider, avoiding the aws-lc build
# toolchain) for the mTLS the Raft transport requires (ADR 0011).
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
# Adapts a bounded tokio mpsc receiver into a `Stream` for the client-streaming
# InstallSnapshot RPC (ADR 0018); a direct, minimal dep from the tonic family
# rather than pulling in async-stream. Pinned here so the whole workspace stays
# in lockstep with the tokio/tonic versions above.
tokio-stream = "0.1"
# gRPC transport for coordinator↔coordinator Raft traffic and the membership
# admin surface; TLS because intra-cluster traffic is mTLS from day one
# (ADR 0011). tonic 0.12 matches the workspace's prost 0.13 pin.
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
# Node configuration is one TOML file per process (ADR 0020), with humane
# duration strings ("1500ms") parsed at load.
toml = "0.8"
humantime-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v7 for entity ids (time-ordered prefix -> btree locality, ADR 0024); v4
# remains for the internal storage instance/cluster stamps and test fixtures,
# where creation-time ordering carries no benefit.
uuid = { version = "1", features = ["v4", "v7"] }
# X.509 leaf-certificate parsing for the agent gateway's mTLS identity check
# (ADR 0011): the client cert's subject CN must equal the claimed NodeId. Only
# the DER→CN parse is used today (the TLS layer already validated the chain);
# the enrollment/CSR issuance flow is future work. Default features are empty,
# so this pulls in no crypto verification backend.
x509-parser = { version = "0.18", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
