[workspace]
resolver = "2"
members = [
    "crates/coppice-core",
    "crates/coppice-proto",
    "crates/coppice-net",
    "crates/coppice-tls",
    "crates/coppice-state",
    "crates/coppice-consensus",
    "crates/coppice-scheduler",
    "crates/coppice-api",
    "crates/coppice-coordinator",
    "crates/coppice-agent",
    "crates/coppice-cli",
    "crates/coppice-testkit",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/Joey9801/coppice-rs"
authors = ["The Coppice Authors"]

[workspace.dependencies]
# Internal crates
coppice-core = { path = "crates/coppice-core" }
coppice-proto = { path = "crates/coppice-proto" }
coppice-net = { path = "crates/coppice-net" }
coppice-tls = { path = "crates/coppice-tls" }
coppice-agent = { path = "crates/coppice-agent" }
coppice-state = { path = "crates/coppice-state" }
coppice-consensus = { path = "crates/coppice-consensus" }
coppice-scheduler = { path = "crates/coppice-scheduler" }
coppice-api = { path = "crates/coppice-api" }
coppice-coordinator = { path = "crates/coppice-coordinator" }
# Test and bench infrastructure only — always a dev-dependency, never shipped.
coppice-testkit = { path = "crates/coppice-testkit" }

# Common third-party dependencies. Versions are pinned centrally so every
# crate in the workspace stays in lockstep.
anyhow = "1"
# Docker Engine API client for the agent's concrete executor
# (docker-executor.md §2): async, typed, and streams events/stats/logs —
# no CLI shelling. Deliberately confined to `coppice-agent`'s
# `executor/docker` modules; everything above the `Executor` trait stays
# runtime-agnostic.
bollard = "0.19"
# Parsing and formatting of byte quantities. `coppice_core::bytes::ByteSize`
# wraps `byte_unit::Byte` rather than using it bare: the wrapper pins the
# `u64` range the protobuf `uint64` assumes, makes all arithmetic saturating
# for the replicated state machine (ADR 0019), and imposes this workspace's
# stricter config policy — a unit suffix is mandatory and bit units are
# refused, neither of which the crate does on its own. Already in the tree as
# a transitive dependency of openraft.
byte-unit = "5"
# Raw log-chunk payloads carried through the telemetry sink without re-framing
# of user content (docker-executor.md §8.2): `bytes::Bytes` is a cheaply-cloned
# refcounted buffer, and the segment store persists it straight into a SQLite
# `BLOB`.
bytes = "1"
# Coordinator CLI surface — deliberately tiny per ADR 0020: `--config`, the
# ADR 0016 intent flags, and the hidden admin verbs.
clap = { version = "4", features = ["derive"] }
# Wall-clock instants and durations. The domain wraps `DateTime<Utc>` and
# `TimeDelta` in `coppice_core::time` rather than using them bare: the
# wrappers pin microsecond precision, which the replicated state machine
# (ADR 0019) and the protobuf wire both assume.
chrono = { version = "0.4", features = ["serde"] }
# CRC32C (Castagnoli) — the per-entry / per-section checksum mandated by
# ADR 0002 and ADR 0018.
crc32c = "0.6"
# Benchmark harness for the ADR 0018 storage benchmark suite.
criterion = "0.5"
# Advisory file locking for the storage LOCK file (ADR 0017); std gains
# File::lock only after our 1.79 MSRV.
fs2 = "0.4"
# Immutable ordered maps with structural sharing (KOI-5): the job-scaled maps
# in the replicated `StateMachine` use `imbl::OrdMap` so view publication and
# snapshot capture clone the whole state in O(1) instead of deep-copying
# millions of entries on the sole apply task.
imbl = "7"
# openraft drives election, replication, and membership; the app data types
# (`Command`, `Applied`, `RejectionReason`) do not implement serde, so the
# "serde" feature is deliberately left off (ADR 0002). Default features cover
# the tokio runtime support the adapter needs. "storage-v2" unseals the
# `RaftLogStorage`/`RaftStateMachine` traits the segment storage engine
# implements (ADR 0002). "generic-snapshot-data" lifts the tokio
# AsyncRead/Write/Seek bounds on `SnapshotData`, letting the binding be the
# file-backed `SnapshotFile` handle so install-snapshot streams the ADR 0018
# container instead of holding it in memory.
openraft = { version = "0.9", features = ["storage-v2", "generic-snapshot-data"] }
# The public client listener (ADR 0031): JSON-over-HTTP on
# `listen.client_addr`, serving proto3-JSON bodies of `coppice.api.v1`
# messages. 0.7 rides the same hyper-1 stack tonic 0.12 already pulls in.
axum = "0.7"
# Embeds `web/dist` into the coordinator so the same client listener serves
# the UI (ADR 0031, "Serving the UI"): release builds carry the assets in
# the binary; debug builds read them live from disk so `coppice dev` picks
# up a fresh `npm run build` without recompiling.
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
# Test-only `ServiceExt::oneshot` for exercising the axum router without a
# real listener; version tracks what axum 0.7/tonic 0.12 already depend on.
tower = { version = "0.5", features = ["util"] }
# HTTP client for the `coppice job` verbs (ADR 0031): they talk to the
# coordinator's JSON-over-HTTP client API. `rustls-tls` so no OpenSSL toolchain
# is dragged in; `json` for typed request/response bodies. Default features are
# off to keep the surface (and the dependency tree) minimal.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
proptest = "1"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protox = "0.7"
# Test-only certificate generation (ring provider, avoiding the aws-lc build
# toolchain) for the mTLS the Raft transport requires (ADR 0011).
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The telemetry segment store (docker-executor.md §8.4), and the convention for
# all SQL in the repo: queries are compile-time-checked against the schema in
# `migrations/`, verified offline through the checked-in `.sqlx/` prepare cache
# so CI needs no live database. `default-features = false` drops the bundled
# TLS/native drivers; `sqlite` bundles SQLite itself (no system libsqlite),
# `migrate` embeds the schema migrations, `macros` provides the checked
# `query!`/`migrate!` macros over the tokio runtime.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
# Adapts a bounded tokio mpsc receiver into a `Stream` for the client-streaming
# InstallSnapshot RPC (ADR 0018); a direct, minimal dep from the tonic family
# rather than pulling in async-stream. Pinned here so the whole workspace stays
# in lockstep with the tokio/tonic versions above.
tokio-stream = "0.1"
# gRPC transport for coordinator↔coordinator Raft traffic and the membership
# admin surface; TLS because intra-cluster traffic is mTLS from day one
# (ADR 0011). tonic 0.12 matches the workspace's prost 0.13 pin.
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
# Hot-reloadable coordinator TLS material (ADR 0037 §6): `coppice-tls` hand-rolls
# a tokio-rustls acceptor whose per-connection `ServerConfig` is resolved from an
# `ArcSwap` at handshake time, so a cert/key/CA rotation on disk is picked up
# without a restart. Pinned to the exact rustls/tokio-rustls versions tonic 0.12
# already resolves (ring provider only — the workspace deliberately avoids the
# aws-lc-rs build toolchain, matching tonic's own feature selection) so the whole
# graph shares one rustls.
arc-swap = "1"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
rustls-pemfile = "2"
# Metric emission facade. Each module that exposes metrics defines
# `describe_metrics()` (describe_* calls plus recursion into submodules) and
# `gather_metrics()` (point-in-time sampling plus the same recursion), so the
# /metrics endpoint (metrics-exporter-prometheus behind the public API) only
# calls the crate roots without knowing any module's internals. That endpoint
# is now wired (issue #46): the coordinator installs the Prometheus recorder at
# startup and serves `/metrics` on the client API listener (ADR 0031); the
# agent serves it on its own optional `metrics_addr`. See
# `coppice_api::http::metrics`.
metrics = "0.24"
# The production Prometheus recorder behind `/metrics` (issue #46). Only the
# recorder + `PrometheusHandle::render` are used — `default-features = false`
# drops the crate's bundled hyper HTTP listener and push-gateway machinery, as
# the endpoint rides the crate's own axum routers. 0.16 tracks the `metrics`
# 0.24 pin above (a mismatched pair would install a recorder the facade's
# global slot cannot see).
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# Test-only: a thread-local `DebuggingRecorder` so unit tests can assert exact
# counter values (`agent_telemetry_*`) without a global exporter. Only the
# `debugging` feature is needed; kept in lockstep with the `metrics` pin above.
metrics-util = { version = "0.19", default-features = false, features = [
    "debugging",
] }
# Safe statvfs for the agent's host disk-pressure monitor
# (docker-executor.md §9). The workspace forbids `unsafe_code`, so the raw
# libc call is not an option; nix wraps it in a safe API.
nix = { version = "0.30", features = ["fs"] }
# Node configuration is one TOML file per process (ADR 0020), with humane
# duration strings ("1500ms") parsed at load.
toml = "0.8"
humantime-serde = "1"
# Coordinator discovery (ADR 0037 §2): the `dns` backend resolves one name per
# consultation. `system-config` reads `/etc/resolv.conf`; `tokio-runtime` runs
# the async resolver on the workspace runtime. Default features are off to keep
# the tree minimal — no DNSSEC, no bundled root hints.
hickory-resolver = { version = "0.24", default-features = false, features = [
    "system-config",
    "tokio-runtime",
] }
# The `advertise_host` fallback chain (ADR 0037 §2) reads the OS-reported
# hostname when no explicit value is configured. Tiny, cross-platform.
gethostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v7 for entity ids (time-ordered prefix -> btree locality, ADR 0024); v4
# remains for the internal storage instance/cluster stamps and test fixtures,
# where creation-time ordering carries no benefit.
uuid = { version = "1", features = ["v4", "v7"] }
# X.509 leaf-certificate parsing for the agent gateway's mTLS identity check
# (ADR 0011): the client cert's subject CN must equal the claimed NodeId. Only
# the DER→CN parse is used today (the TLS layer already validated the chain);
# the enrollment/CSR issuance flow is future work. Default features are empty,
# so this pulls in no crypto verification backend.
x509-parser = { version = "0.18", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
