[package]
name = "coppice-agent"
description = "Node agent daemon: local container execution and reconciliation with coordinator intent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-net.workspace = true
# The filesystem seam (`coppice_consensus::fs`) only: the journal is written
# through it so the crash harness can hammer it (ADR 0009).
coppice-consensus.workspace = true
anyhow.workspace = true
bollard.workspace = true
chrono.workspace = true
crc32c.workspace = true
humantime-serde.workspace = true
metrics.workspace = true
nix.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
coppice-testkit.workspace = true
tempfile.workspace = true

[lints]
workspace = true
