[package]
name = "coppice-agent"
description = "Node agent daemon: local container execution and reconciliation with coordinator intent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-net.workspace = true
# The filesystem seam (`coppice_consensus::fs`) only: the journal is written
# through it so the crash harness can hammer it (ADR 0009).
coppice-consensus.workspace = true
anyhow.workspace = true
bollard.workspace = true
bytes.workspace = true
chrono.workspace = true
crc32c.workspace = true
humantime-serde.workspace = true
metrics.workspace = true
nix.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
coppice-testkit.workspace = true
metrics-util.workspace = true
# The in-process NodeService mTLS integration test mints a throwaway CA and
# dual-EKU leaves (a dNSName SAN of the node id) to prove id-pinned dialing and
# mandatory client certs (ADR 0034), mirroring `coppice dev`'s PKI.
rcgen.workspace = true
tempfile.workspace = true

[lints]
workspace = true
