[package]
name = "coppice-api"
description = "External API layer: submission, queries, subscriptions, and admin endpoints."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-state.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
