[package]
name = "coppice-api"
description = "External API layer: submission, queries, subscriptions, and admin endpoints."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
coppice-core.workspace = true
coppice-state.workspace = true
# The `/metrics` endpoint (issue #46): renders the process's Prometheus
# recorder. The facade for the same, so the test-only local recorder can be
# built without a global install.
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
