[package]
name = "coppice-cli"
description = "The single `coppice` binary: coordinator, agent, and API client behind one entry point."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "coppice"
path = "src/main.rs"

[dependencies]
coppice-coordinator.workspace = true
coppice-agent.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
