[package]
name = "coppice-cli"
description = "The single `coppice` binary: coordinator, agent, and API client behind one entry point."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "coppice"
path = "src/main.rs"

[dependencies]
coppice-coordinator.workspace = true
# `coppice dev`'s ready banner asks whether a web UI build is embedded, and
# `coppice job` reuses this crate's wire DTOs (request/response shapes) rather
# than redefining the `/api/v1` contract.
coppice-api.workspace = true
coppice-agent.workspace = true
coppice-core.workspace = true
# The `dev` subcommand runs an in-process agent whose journal goes through
# the consensus crate's filesystem seam, exactly like the real daemon.
coppice-consensus.workspace = true
# The hot-reload TLS store `coppice dev` builds for its in-process coordinator
# (ADR 0037 §6).
coppice-tls.workspace = true
# `coppice dev` seeds the replicated policy and a dev quota entity by
# proposing the same commands `coppice-cli policy` will use (ADR 0020).
coppice-state.workspace = true
anyhow.workspace = true
clap.workspace = true
# `coppice dev` mints a throwaway per-run CA + leaves so the production mTLS
# paths run unmodified with zero operator setup (localhost only, no auth).
rcgen.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# `coppice job` talks to the coordinator's JSON HTTP API (ADR 0031).
reqwest.workspace = true
# A job spec is one TOML file, parsed with the same conventions as the daemon
# config files (ADR 0020): humane duration strings and byte-size units.
toml.workspace = true
humantime-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
# `coppice cluster init` mints a fresh formation token (a UUID v4 string) when
# the operator supplies neither `--formation-token` nor `--formation-token-file`
# (ADR 0037 §3).
uuid.workspace = true

[dev-dependencies]
# In-process axum server for the `coppice job` HTTP round-trip tests: canned
# handlers serving real DTO JSON, so the client tests exercise the wire path
# without a live coordinator.
axum.workspace = true

[lints]
workspace = true
