[package]
name = "coppice-consensus"
description = "Raft consensus integration: log replication, leader election, and snapshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-state.workspace = true
fs2.workspace = true
openraft.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
# Turns on the openraft storage compliance suite in
# tests/openraft_compliance.rs. Off until the segment storage engine exists;
# the storage task flips it on (and then removes the gate once green — the
# suite is a merge gate per ADR 0002, not an optional extra).
storage-compliance = []

[lints]
workspace = true
