[package]
name = "coppice-consensus"
description = "Raft consensus integration: log replication, leader election, and snapshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-state.workspace = true
crc32c.workspace = true
fs2.workspace = true
openraft.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# coppice-testkit dev-depends back on this crate; Cargo permits the cycle
# because dev-dependencies sit outside the library's own build graph.
coppice-testkit.workspace = true
criterion.workspace = true
tempfile.workspace = true

[lints]
workspace = true

# ADR 0018 storage benchmark suite (docs/architecture/storage-testing.md,
# "The benchmark suite"). criterion drives all three; harness = false hands
# `main` to criterion's own runner instead of the default `#[bench]` harness.
[[bench]]
name = "append_commit"
harness = false

[[bench]]
name = "snapshot_codec"
harness = false

[[bench]]
name = "recovery_replay"
harness = false
