[package]
name = "coppice-coordinator"
description = "Coordinator daemon: the replicated control plane binding consensus, scheduling, and the API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "coppice_coordinator"
path = "src/lib.rs"

[[bin]]
name = "coppice-coordinator"
path = "src/main.rs"

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-raft-net.workspace = true
coppice-agent-net.workspace = true
coppice-state.workspace = true
coppice-consensus.workspace = true
coppice-scheduler.workspace = true
coppice-api.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
# Wraps the per-session outbound mpsc as a `Stream` for the tonic bidi
# response half of the agent session RPC (`coppice.agent.v1.AgentService`).
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
# `json` (not in the workspace default feature set) backs the config's
# `log_format = "json"` structured-logging option; mirrors the `uuid` pattern
# below of enabling a feature purely from this crate.
tracing-subscriber = { workspace = true, features = ["json"] }
serde.workspace = true
toml.workspace = true
humantime-serde.workspace = true
# `Uuid` needs the "serde" feature (not part of the workspace default) to
# deserialize `cluster_id` from the config file's hyphenated string form.
uuid = { workspace = true, features = ["serde"] }
# Parses the agent's mTLS client-leaf certificate to enforce CN == NodeId at
# session accept (ADR 0011); see `tasks::agent_gateway`.
x509-parser.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Test-only self-signed CA + per-node leaf certs for the mTLS Raft/admin mesh
# the multi-node integration test drives (ADR 0011). Dev-only: production nodes
# read PEM material from disk (config `[tls]`), never mint it.
rcgen.workspace = true
# The real node agent (lib): its `Session` runner, `FakeExecutor`, and journal
# drive the end-to-end agent↔coordinator reconciliation protocol test
# (`tests/agent_protocol.rs`) against the live coordinator runtime.
coppice-agent.workspace = true

[lints]
workspace = true
