[package]
name = "coppice-coordinator"
description = "Coordinator daemon: the replicated control plane binding consensus, scheduling, and the API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-net.workspace = true
coppice-state.workspace = true
coppice-consensus.workspace = true
coppice-scheduler.workspace = true
coppice-api.workspace = true
anyhow.workspace = true
# The fanout's `proposer_skew` histogram (ADR 0032), registered through the
# same describe/gather pattern as `coppice-consensus`.
metrics.workspace = true
# Installs the process-wide Prometheus recorder at startup and hands its
# handle to the `/metrics` endpoint on the client API listener (issue #46).
metrics-exporter-prometheus.workspace = true
# Serves the `coppice_api::http` router on the client listener (ADR 0031).
axum.workspace = true
clap.workspace = true
tokio.workspace = true
# Wraps the per-session outbound mpsc as a `Stream` for the tonic bidi
# response half of the agent session RPC (`coppice.agent.v1.AgentService`).
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
# `json` (not in the workspace default feature set) backs the config's
# `log_format = "json"` structured-logging option; mirrors the `uuid` pattern
# below of enabling a feature purely from this crate.
tracing-subscriber = { workspace = true, features = ["json"] }
serde.workspace = true
toml.workspace = true
humantime-serde.workspace = true
uuid.workspace = true
# Parses the agent's mTLS client-leaf certificate to enforce CN == NodeId at
# session accept (ADR 0011); see `tasks::agent_gateway`.
x509-parser.workspace = true

[dev-dependencies]
tempfile.workspace = true
# `start_paused` virtual time for the derived-stats bucket-interval test.
tokio = { workspace = true, features = ["test-util"] }
# Test-only self-signed CA + per-node leaf certs for the mTLS Raft/admin mesh
# the multi-node integration test drives (ADR 0011). Dev-only: production nodes
# read PEM material from disk (config `[tls]`), never mint it.
rcgen.workspace = true
# The real node agent (lib): its `Session` runner, `FakeExecutor`, and journal
# drive the end-to-end agent↔coordinator reconciliation protocol test
# (`tests/agent_protocol.rs`) against the live coordinator runtime.
coppice-agent.workspace = true
# `tower::ServiceExt::oneshot` drives the real axum router in-process, and
# `serde_json` decodes its JSON bodies, for the best-effort job-log e2e test
# (`tests/job_logs.rs`, ADR 0034). `bytes` builds the seeded `LogChunk` payloads.
tower.workspace = true
serde_json.workspace = true
bytes.workspace = true

[lints]
workspace = true
