[package]
name = "coppice-coordinator"
description = "Coordinator daemon: the replicated control plane binding consensus, scheduling, and the API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-proto.workspace = true
coppice-net.workspace = true
coppice-state.workspace = true
coppice-consensus.workspace = true
coppice-scheduler.workspace = true
coppice-api.workspace = true
# Hot-reloadable mTLS store (ADR 0037 §6): the connection-time acceptor for the
# two mTLS listeners and the shared material the raft mesh and node-fetch client
# dial with.
coppice-tls.workspace = true
anyhow.workspace = true
# The fanout's `proposer_skew` histogram (ADR 0032), registered through the
# same describe/gather pattern as `coppice-consensus`.
metrics.workspace = true
# Installs the process-wide Prometheus recorder at startup and hands its
# handle to the `/metrics` endpoint on the client API listener (issue #46).
metrics-exporter-prometheus.workspace = true
# Serves the `coppice_api::http` router on the client listener (ADR 0031).
axum.workspace = true
clap.workspace = true
tokio.workspace = true
# Wraps the per-session outbound mpsc as a `Stream` for the tonic bidi
# response half of the agent session RPC (`coppice.agent.v1.AgentService`).
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
# `json` (not in the workspace default feature set) backs the config's
# `log_format = "json"` structured-logging option; mirrors the `uuid` pattern
# below of enabling a feature purely from this crate.
tracing-subscriber = { workspace = true, features = ["json"] }
serde.workspace = true
# `admin status --json` renders the cluster-wide view as stable JSON to stdout
# (ADR 0037 §7).
serde_json.workspace = true
toml.workspace = true
humantime-serde.workspace = true
uuid.workspace = true
# Coordinator discovery (ADR 0037 §2): the `dns` backend resolves candidate
# raft addresses (A/AAAA + SRV) once per consultation.
hickory-resolver.workspace = true
# The `advertise_host` fallback chain reads the OS hostname when unset (ADR 0037).
gethostname.workspace = true
# Parses the agent's mTLS client-leaf certificate to enforce CN == NodeId at
# session accept (ADR 0011); see `tasks::agent_gateway`.
x509-parser.workspace = true
# Encode the `MembershipRefusal` detail proto into a gRPC Status's binary
# details for machine-readable membership refusals (ADR 0037 §4/§5/§6).
prost.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
# `start_paused` virtual time for the derived-stats bucket-interval test.
tokio = { workspace = true, features = ["test-util"] }
# Test-only self-signed CA + per-node leaf certs for the mTLS Raft/admin mesh
# the multi-node integration test drives (ADR 0011). Dev-only: production nodes
# read PEM material from disk (config `[tls]`), never mint it.
rcgen.workspace = true
# The real node agent (lib): its `Session` runner, `FakeExecutor`, and journal
# drive the end-to-end agent↔coordinator reconciliation protocol test
# (`tests/agent_protocol.rs`) against the live coordinator runtime.
coppice-agent.workspace = true
# `tower::ServiceExt::oneshot` drives the real axum router in-process for the
# best-effort job-log e2e test (`tests/job_logs.rs`, ADR 0034); `serde_json`
# (a normal dependency, above) decodes its JSON bodies. `bytes` builds the
# seeded `LogChunk` payloads.
tower.workspace = true
bytes.workspace = true
# Drives the plain-HTTP client listener (`/readyz`, ADR 0037 §7) end to end in
# the readiness integration test.
reqwest.workspace = true

[lints]
workspace = true
